<resources>
    <string name="app_name">Kyiv Boryspil Express</string>
    <string name="traveling">traveling</string>
    <string name="from">from ?</string>
    <string name="where_are_you">Where are you</string>
    <string name="enter_your_departure">Enter your departure station</string>
    <string name="all">All</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="current_trips">Current Trips</string>
    <string name="boryspil_express">Boryspil Express</string>
    <string name="_6_nov_09_40">6 Nov, 09:40</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="account">Account</string>
    <string name="vydubychi">Vydubychi</string>
    <string name="kyiv">Kyiv</string>
    <string name="information">Information</string>
    <string name="darnitsa">Darnitsa</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="power_by">Dmytro Kuchura</string>
    <string name="outbound">To airport</string>
    <string name="inbound">From airport</string>
    <string name="news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="trip_info">Trip info</string>
    <string name="cancel">Cancel</string>
    <string name="travel_time">Travel time</string>
    <string name="trip_number">Trip number</string>
    <string name="_44_minutes">44 minutes</string>
    <string name="_802">№ 802</string>
    <string name="airport">Airport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>