<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dmytro.kuchura.kyiv.boryspil.express.fragments.MainFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.dmytro.kuchura.kyiv.boryspil.express.fragments.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.dmytro.kuchura.kyiv.boryspil.express.fragments.InfoFragment"
        android:label="@string/information"
        tools:layout="@layout/fragment_info" />
</navigation>