<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/express_background"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageTrainOutline"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/round_outline"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_train"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/boryspil_express"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageTrainOutline"
            app:layout_constraintStart_toEndOf="@+id/imageTrainOutline"
            app:layout_constraintTop_toTopOf="@+id/imageTrainOutline" />

        <TextView
            android:id="@+id/textTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:shadowColor="@color/colorTextPrimary"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/traveling"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageHeader"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:shadowColor="@color/colorTextPrimary"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/from"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintBottom_toBottomOf="@id/textTrain"
            app:layout_constraintStart_toEndOf="@id/textTrain"
            app:layout_constraintTop_toTopOf="@id/textTrain" />

        <TextView
            android:id="@+id/textWhereAreYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorTextPrimary"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/where_are_you"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintBottom_toTopOf="@id/textTrain"
            app:layout_constraintStart_toStartOf="@id/textTrain" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@id/imageHeader"
            app:layout_constraintTop_toBottomOf="@id/imageHeader">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_6sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_location"
                    app:tint="@color/colorTextHint" />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:hint="@string/enter_your_departure"
                    android:inputType="text"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageRightArrow"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardSearch"
            app:tint="@color/colorTextPrimary" />

        <TextView
            android:id="@+id/textAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@id/imageRightArrow"
            app:layout_constraintEnd_toStartOf="@id/imageRightArrow"
            app:layout_constraintTop_toTopOf="@id/imageRightArrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/current_trips"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageRightArrow"
            app:layout_constraintEnd_toStartOf="@id/textAll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageRightArrow" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerMainContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textAll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:orientation="vertical">

                <include layout="@layout/schedule_list_item_placeholder" />

                <include layout="@layout/schedule_list_item_placeholder" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/textAll" />

        <TextView
            android:id="@+id/textInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/information"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/mainRecyclerView" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInformation">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_10sdp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/kyiv"
                        app:riv_corner_radius="@dimen/_8sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="@dimen/_8sdp"
                        android:shadowColor="@color/colorTextPrimary"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="10"
                        android:text="@string/kyiv"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_10sdp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/vydubychi"
                        app:riv_corner_radius="@dimen/_8sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="@dimen/_8sdp"
                        android:shadowColor="@color/colorTextPrimary"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="10"
                        android:text="@string/vydubychi"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_10sdp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/darnitsa"
                        app:riv_corner_radius="@dimen/_8sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="@dimen/_8sdp"
                        android:shadowColor="@color/colorTextPrimary"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="10"
                        android:text="@string/darnitsa"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />
                </FrameLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>